added card filler

--- a/index.html
+++ b/index.html
@@ -9,7 +9,26 @@
 <body>
   <div class="cards">
     <div class="card">
-      
+      <img src="" alt="">
+      <h2>Applying color to UI</h2>
+      <p>In a UI, color has a variety of roles:...</p>
+      <a href="">Related link</a>
+    </div>
+  </div>
+  <div class="cards">
+    <div class="card">
+      <img src="" alt="">
+      <h2>Imagery in Ui</h2>
+      <p>Imagery communicates an...</p>
+      <a href="">Related link</a>
+    </div>
+  </div>
+  <div class="cards">
+    <div class="card">
+      <img src="" alt="">
+      <h2>The color system</h2>
+      <p>Create a color theme that reflects...</p>
+      <a href="">Related link</a>
     </div>
   </div>
 </body>
