final touches with CSS

--- a/index.html
+++ b/index.html
@@ -1,35 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <title>Tres-cards</title>
-</head>
-<body>
-  <div class="cards">
-    <div class="card">
-      <img src="https://hgtvhome.sndimg.com/content/dam/images/hgtv/fullset/2011/7/18/0/HGTV_Color-Wheel-Full_s4x3.jpg.rend.hgtvcom.616.462.suffix/1400967008479.jpeg" alt="color wheel">
-      <h2>Applying color to UI</h2>
-      <p>In a UI, color has a variety of roles:...</p>
-      <a href="https://en.wikipedia.org/wiki/Sword_Art_Online">Related link</a>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <title>Tres-cards</title>
+    <script
+      src="https://kit.fontawesome.com/06dc34f83e.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <div class="contain">
+      <div class="cards">
+        <div class="card">
+          <img
+            class="photo"
+            src="https://hgtvhome.sndimg.com/content/dam/images/hgtv/fullset/2011/7/18/0/HGTV_Color-Wheel-Full_s4x3.jpg.rend.hgtvcom.616.462.suffix/1400967008479.jpeg"
+            alt="color wheel"
+          />
+          <h2>Applying color to UI</h2>
+          <p>In a UI, color has a variety of roles:...</p>
+          <a href="https://en.wikipedia.org/wiki/Sword_Art_Online"
+            >Related link</a
+          >
+          <i class="fa-solid fa-square-arrow-up-right"></i>
+        </div>
+        <div class="card">
+          <img
+            class="photo"
+            src="https://cdn.create.vista.com/api/media/small/245026708/stock-vector-chat-message-bubble-background-close-isolated"
+            alt=" message bubble"
+          />
+          <h2>Imagery in Ui</h2>
+          <p>Imagery communicates an...</p>
+          <a href="https://en.wikipedia.org/wiki/Sword_Art_Online"
+            >Related link</a
+          >
+          <i class="fa-solid fa-square-arrow-up-right"></i>
+        </div>
+        <div class="card">
+          <img
+            class="photo"
+            src="https://hgtvhome.sndimg.com/content/dam/images/hgtv/fullset/2011/7/18/0/HGTV_Color-Wheel-Full_s4x3.jpg.rend.hgtvcom.616.462.suffix/1400967008479.jpeg"
+            alt="color wheel"
+          />
+          <h2>The color system</h2>
+          <p>Create a color theme that reflects...</p>
+          <a href="https://en.wikipedia.org/wiki/Sword_Art_Onlinegit "
+            >Related link</a
+          >
+          <i class="fa-solid fa-square-arrow-up-right"></i>
+        </div>
+      </div>
     </div>
-  </div>
-  <div class="cards">
-    <div class="card">
-      <img src="https://cdn.create.vista.com/api/media/small/245026708/stock-vector-chat-message-bubble-background-close-isolated" alt=" message bubble">
-      <h2>Imagery in Ui</h2>
-      <p>Imagery communicates an...</p>
-      <a href="https://en.wikipedia.org/wiki/Sword_Art_Online">Related link</a>
-    </div>
-  </div>
-  <div class="cards">
-    <div class="card">
-      <img src="https://hgtvhome.sndimg.com/content/dam/images/hgtv/fullset/2011/7/18/0/HGTV_Color-Wheel-Full_s4x3.jpg.rend.hgtvcom.616.462.suffix/1400967008479.jpeg" alt="color wheel">
-      <h2>The color system</h2>
-      <p>Create a color theme that reflects...</p>
-      <a href="https://en.wikipedia.org/wiki/Sword_Art_Onlinegit ">Related link</a>
-    </div>
-  </div>
-</body>
+  </body>
 </html>
